[gd_scene load_steps=7 format=3 uid="uid://dnnxf1yrdr4tb"]

[ext_resource type="Script" path="res://scripts/tutorial.gd" id="1_b4nqc"]
[ext_resource type="PackedScene" uid="uid://cib5ytvbghks0" path="res://scenes/yoyo.tscn" id="2_3biut"]
[ext_resource type="Shader" path="res://shaders/flash.gdshader" id="3_oooxd"]
[ext_resource type="FontFile" uid="uid://e0dk132vrmf8" path="res://assets/Pixel Bug.otf" id="4_03w8b"]
[ext_resource type="PackedScene" uid="uid://brws2fdpkddsf" path="res://scenes/blue_slime.tscn" id="5_3nopi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vp8ee"]
resource_local_to_scene = true
shader = ExtResource("3_oooxd")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b4nqc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 800.0
color = Color(0, 0, 0, 0.784314)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 800.0

[node name="MainVbox" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="GemInfo" type="VBoxContainer" parent="ColorRect/CenterContainer/MainVbox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/GemInfo"]
layout_mode = 2
alignment = 1

[node name="Yoyo" parent="ColorRect/CenterContainer/MainVbox/GemInfo/HBoxContainer" instance=ExtResource("2_3biut")]
material = SubResource("ShaderMaterial_vp8ee")
position = Vector2(420, -60)
scale = Vector2(7, 7)

[node name="Label" type="Label" parent="ColorRect/CenterContainer/MainVbox/GemInfo/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 64
text = "GEMS"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/GemInfo"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="ColorRect/CenterContainer/MainVbox/GemInfo/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Follow the player in a trail until detached"

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/GemInfo"]
layout_mode = 2
alignment = 1

[node name="Label3" type="Label" parent="ColorRect/CenterContainer/MainVbox/GemInfo/HBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Detach over a capture point to convert into ammo"

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/GemInfo"]
layout_mode = 2
alignment = 1

[node name="Label4" type="Label" parent="ColorRect/CenterContainer/MainVbox/GemInfo/HBoxContainer4"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Detach incorrectly, convert into enemy Slimes"

[node name="HBoxContainer5" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/GemInfo"]
layout_mode = 2
alignment = 1

[node name="Label4" type="Label" parent="ColorRect/CenterContainer/MainVbox/GemInfo/HBoxContainer5"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Capture multiple at once for a score multiplier!"

[node name="SlimeInfo" type="VBoxContainer" parent="ColorRect/CenterContainer/MainVbox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo"]
layout_mode = 2
alignment = 1

[node name="BlueSlime" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo/HBoxContainer" instance=ExtResource("5_3nopi")]
position = Vector2(451, -56)
scale = Vector2(6, 6)

[node name="Label" type="Label" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 64
text = "SLIMES"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Want to ruin your day"

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo"]
layout_mode = 2
alignment = 1

[node name="Label3" type="Label" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo/HBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Kills player on contact"

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo"]
layout_mode = 2
alignment = 1

[node name="Label4" type="Label" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo/HBoxContainer4"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Can be killed by shooting"

[node name="HBoxContainer5" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo"]
layout_mode = 2
alignment = 1

[node name="Label4" type="Label" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo/HBoxContainer5"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Killstreaks without reloading provide a score multiplier!"

[node name="HBoxContainer6" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo"]
layout_mode = 2
alignment = 1

[node name="Label4" type="Label" parent="ColorRect/CenterContainer/MainVbox/SlimeInfo/HBoxContainer6"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "Watch the eye! They look where they are about to move"

[node name="Show" type="VBoxContainer" parent="ColorRect/CenterContainer/MainVbox"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label4" type="Label" parent="ColorRect/CenterContainer/MainVbox/Show"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 64
text = "Show every launch?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/MainVbox/Show"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Yes" type="Button" parent="ColorRect/CenterContainer/MainVbox/Show/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "YES"

[node name="No" type="Button" parent="ColorRect/CenterContainer/MainVbox/Show/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 32
text = "NO"

[node name="Close" type="Button" parent="ColorRect/CenterContainer/MainVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_03w8b")
theme_override_font_sizes/font_size = 64
text = "CLOSE"

[node name="GemTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SlimeTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="pressed" from="ColorRect/CenterContainer/MainVbox/Show/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/MainVbox/Show/HBoxContainer/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/MainVbox/Close" to="." method="_on_close_pressed"]
